secure endpoints and setup redis
