# cmd/api/auth.go
@@ -5,7 +5,9 @@ import (
 	"encoding/hex"
 	"fmt"
 	"net/http"
+	"time"
 
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/google/uuid"
 	"github.com/lunatictiol/go-based-social-media/internal/mailer"
 	"github.com/lunatictiol/go-based-social-media/internal/store"
@@ -21,6 +23,10 @@ type UserWithToken struct {
 	*store.User
 	Token string `json:"token"`
 }
+type LoginUserPayload struct {
+	Email    string `json:"email" validate:"required,email,max=255"`
+	Password string `json:"password" validate:"required,min=8,max=70"`
+}
 
 // registerUserHandler godoc
 //
@@ -33,7 +39,7 @@ type UserWithToken struct {
 //	@Success		201		{object}	UserWithToken		"User registered"
 //	@Failure		400		{object}	error
 //	@Failure		500		{object}	error
-//	@Router			/authenticate/user [post]
+//	@Router			/authenticate/register [post]
 func (a *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
 	var payload RegisterUserPayload
 	if err := ReadJSON(w, r, &payload); err != nil {
@@ -109,4 +115,60 @@ func (a *application) registerUserHandler(w http.ResponseWriter, r *http.Request
 	if err := a.jsonResponse(w, http.StatusCreated, userWithToken); err != nil {
 		a.WriteInternalServerError(w, r, err)
 	}
+}
+
+// createTokenHandler godoc
+//
+//	@Summary		Creates a token
+//	@Description	Creates a token for a user
+//	@Tags			authentication
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		LoginUserPayload	true	"User credentials"
+//	@Success		200		{string}	string				"Token"
+//	@Failure		400		{object}	error
+//	@Failure		401		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/authenticate/login [post]
+func (a *application) loginUserHandler(w http.ResponseWriter, r *http.Request) {
+	var payload LoginUserPayload
+	if err := ReadJSON(w, r, &payload); err != nil {
+		a.BadRequestResponse(w, r, err)
+		return
+	}
+
+	if err := Validator.Struct(payload); err != nil {
+		a.BadRequestResponse(w, r, err)
+		return
+	}
+
+	user, err := a.store.Users.GetByEmail(r.Context(), payload.Email)
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			a.unauthorisedResponse(w, r, err)
+			return
+		default:
+			a.WriteInternalServerError(w, r, err)
+			return
+		}
+	}
+	claims := jwt.MapClaims{
+		"sub": user.Id,
+		"exp": time.Now().Add(a.config.auth.token.exp).Unix(),
+		"iat": time.Now().Unix(),
+		"nbf": time.Now().Unix(),
+		"iss": a.config.auth.token.iss,
+		"aud": a.config.auth.token.iss,
+	}
+	token, err := a.authenticator.GenerateToken(claims)
+	if err != nil {
+		a.WriteInternalServerError(w, r, err)
+		return
+	}
+
+	if err := a.jsonResponse(w, http.StatusCreated, token); err != nil {
+		a.WriteInternalServerError(w, r, err)
+	}
+
 }
